<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <!-- Placeholder layout for locking screen-->
    <FrameLayout
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/lock_layout_description" />

    <!-- Clock and calendar-->
    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextClock
            android:id="@+id/clock"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:format12Hour="hh:mm"
            android:textSize="@dimen/time_size"
            tools:text="02:34" />

        <TextView
            android:id="@+id/date"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="EEE, dd MMM"
            android:format24Hour="EEE, dd MMM"
            android:paddingHorizontal="3dp"
            android:textSize="@dimen/date_size"
            android:fontFamily="@font/hindi_siliguri_bold"
            tools:text="Thu, 30 Dec" />

    </LinearLayout>

    <!-- Home apps-->

    <LinearLayout
        android:id="@+id/homeAppsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="112dp"
        android:paddingBottom="48dp">

        <TextView
            android:id="@+id/homeApp1"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_1"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp2"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_2"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp3"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_3"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp4"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_4"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp5"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_5"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp6"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_6"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp7"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_7"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/homeApp8"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_8"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <!-- Icon for apps-->

    <LinearLayout
        android:id="@+id/homeIconsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="112dp"
        android:paddingBottom="48dp">

        <ImageView
            android:id="@+id/IconApp1"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_9"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp2"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_10"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp3"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_11"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp4"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_12"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp5"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_13"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp6"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_14"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp7"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_15"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />

        <ImageView
            android:id="@+id/IconApp8"
            android:src="@drawable/ic_circle"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/tag_16"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="?attr/primaryColor" />


    </LinearLayout>


    <TextView
        android:id="@+id/firstRunTips"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/swipe_up_for_apps"
        android:visibility="gone"
        tools:visibility="visible" />

    <!-- Set default launcher -->
    <TextView
        android:id="@+id/setDefaultLauncher"
        style="@style/TextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="56dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/set_as_default_launcher"
        android:visibility="gone" />
</FrameLayout>